fix(ui5-illustrated-message): title subtitle aligned with visual spec - adjusted rem values to convert to whole pixels

--- a/packages/fiori/src/themes/IllustratedMessage.css
+++ b/packages/fiori/src/themes/IllustratedMessage.css
@@ -47,7 +47,7 @@
     text-align: center;
     margin-bottom: 1rem;
     line-height: 1.3;
-    max-width: 61.938rem;
+    max-width: 61.9375rem;
 }
 
 .ui5-illustrated-message-subtitle {
@@ -57,7 +57,7 @@
     line-height: 1.4;
     color: var(--sapContent_LabelColor);
     margin-bottom: 0.5rem;
-    max-width: 61.938rem;
+    max-width: 61.9375rem;
 }
 
 .ui5-illustrated-message-actions {
@@ -71,13 +71,13 @@
 :host([media="dialog"]) .ui5-illustrated-message-title {
     margin-bottom: 0.5rem;
     font-size: var(--sapFontHeader4Size);
-    max-width: 40.563rem;
+    max-width: 40.5625rem;
 }
 
 :host([media="dialog"]) .ui5-illustrated-message-subtitle {
 	margin-bottom: 0.5rem;
     font-size: var(--sapFontSize);
-    max-width: 40.563rem;
+    max-width: 40.5625rem;
 }
 
 :host([media="dialog"]) .ui5-illustrated-message-actions {
